# osmsg

./: .dockerignore  .env.example  .gitignore  .markdownlint.json  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Procfile  README.md  docker-compose.yml  justfile  pyproject.toml  railway.json  worker-entrypoint.sh
.github/workflows/: build.yml  build_and_publish_docker.yml  ci.yml  docker.yml  publish.yml  release.yml  test_app.yml  windows-exe.yml
api/: __init__.py  app.py  db.py  pg_schema.py  queries.py  schemas.py
api/routers/: v1.py
api/templates/: home.html
data/: Readme.md  example_boundary.geojson
docs/: Installation.md  Manual.md  Version_control.md  api-performance.md  infra.md
experiments/parquet-history/: README.md  planet_batch.sh
infra/: .env.example  Caddyfile  docker-compose.yml  osmsg.service
osmsg/: __init__.py  _http.py  _tick.py  app.py  auth.py  boundary.py  cli.py  db.py  exceptions.py  fetch.py  geofabrik.py  gui.py  handlers.py  history.py  models.py  output.py  pg_schema.py  pipeline.py  processor.py  replication.py  tm.py  ui.py  utils.py  workers.py
osmsg/Frontend/: app.py
osmsg/Frontend/static/css/: style.css
osmsg/Frontend/static/js/: main.js
osmsg/Frontend/templates/: about.html  base.html  contact.html  index.html  statistics.html
osmsg/Frontend/templates/components/: footer.html  navbar.html
osmsg/Frontend/templates/partial/: table.html
osmsg/Frontend/templates/partials/: leaderboard.html
osmsg/api/: app.py  db.py  queries.py
osmsg/db/: __init__.py  duckdb_schema.py  ingest.py  queries.py  schema.py
osmsg/export/: __init__.py  csv.py  json.py  markdown.py  parquet.py  psql.py
osmsg/maintain/: __init__.py  cli.py  convert.py  manifest.py  month.py  parquet.py  pbf_split.py
packaging/: README.md
packaging/conda/: meta.yaml
packaging/homebrew/: osmsg.rb
packaging/pyinstaller/: entry.py  gui_entry.py  osmsg.spec
scripts/: check_api_query_performance.py
tests/: conftest.py  test_api.py  test_auth.py  test_cli.py  test_cli_structure.py  test_db_queries.py  test_download_resilience.py  test_export.py  test_fetch.py  test_geofabrik.py  test_gui.py  test_handlers.py  test_history.py  test_history_fallback.py  test_insert.py  test_maintain_convert.py  test_maintain_month.py  test_models.py  test_pipeline_smoke.py  test_psql_export.py  test_replication.py  test_reuse.py  test_smoke.py  test_state.py  test_stats_correctness.py  test_tick.py  test_tm.py  test_update_source.py
