[project]
name = "osmsg"
dynamic = ["version"]
description = "OpenStreetMap Stats Generator: Commandline"
readme = "README.md"
authors = [
    {name = "Kshitij Raj Sharma", email = "skshitizraj@gmail.com"},
]
license = {text = "GPL-3.0-only"}
requires-python = ">=3.9"
dependencies = [
    "pandas",
    "osmium",
    "requests",
    "shapely",
    "geopandas",
    "tqdm",
    "seaborn",
    "matplotlib",
    "humanize",
    "pytz",
    "pydantic",
    "duckdb",
    "pyarrow",
]

keywords = ["osm", "stats", "commandline", "openstreetmap"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://github.com/kshitijrajsharma/osmsg"
documentation = "https://github.com/kshitijrajsharma/osmsg"
repository = "https://github.com/kshitijrajsharma/osmsg"

[project.optional-dependencies]
test = [
    "pytest>=7.4.2",
    "pytest-mock>=3.14.0",
    "coverage>=7.6.1",
    "coverage-badge>=1.1.2",
]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.2",
    "mkdocstrings-python>=1.7.0",
    "mkdocs-exclude>=1.0.2",
]

[project.scripts]
osmsg = "osmsg.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "commitizen",
    "pre-commit",
]

ui = [
    "streamlit>=1.44.1",
]

[tool.pytest.ini_options]
addopts = "-ra -q -p no:warnings"
testpaths = ["tests"]
pythonpath = "osmsg"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "osmsg/__version__.py",
]

[tool.hatch.version]
path = "osmsg/__version__.py"

[tool.black]
line-length = 132
target-versions = ["py39", "py310", "py311", "py312"]

[tool.ruff]
fix = true
line-length = 132
target-version = "py312"
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "osmsg/__version__.py",
]

[tool.ruff.lint]
select = ["I", "E", "W", "D", "B", "F", "N", "Q"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.coverage.run]
source = ["osmsg"]

[tool.coverage.report]
show_missing = true
