[project]
name = "osmsg"
version = "1.0.1"
description = "OpenStreetMap Stats Generator: Commandline"
readme = "README.md"
authors = [
    {name = "Kshitij Raj Sharma", email = "skshitizraj@gmail.com"},
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.5.2",
    "osmium>=4.3.1",
    "platformdirs>=4.5.1",
    "pyarrow>=24.0.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "pytz>=2024.1",
    "requests>=2.32.5",
    "rich>=13.0",
    "shapely>=2.1.2",
    "typer>=0.25.0",
    "typer-config[yaml]>=1.5.1",
]

keywords = ["osm", "stats", "commandline", "openstreetmap"]
classifiers = [
    "Topic :: Utilities",
    "Topic :: Scientific/Engineering :: GIS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
homepage = "https://github.com/osgeonepal/osmsg"
documentation = "https://github.com/osgeonepal/osmsg"
repository = "https://github.com/osgeonepal/osmsg"

[project.scripts]
osmsg = "osmsg.cli:app"

[build-system]
requires = ["uv_build>=0.5.15,<0.9"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "osmsg"
module-root = ""

[dependency-groups]
dev = [
    "pytest>=7.4.2",
    "pytest-mock>=3.14.0",
    "coverage>=7.6.1",
    "ty>=0.0.32",
    "ruff>=0.15.12",
    "pre-commit>=4.6.0",
    "commitizen>=4.13.10",
]

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
markers = [
    "network: tests that hit the public internet (deselect with -m 'not network').",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "semver"
version_provider = "pep621"
update_changelog_on_bump = true
version_files = [
    "pyproject.toml:version",
    "osmsg/__version__.py",
]
pre_bump_hooks = [
    "uv lock",
    "git add uv.lock",
]

[tool.ruff]
fix = true
line-length = 120
target-version = "py311"
exclude = [
    ".git",
    ".ruff_cache",
    ".vscode",
    "__pypackages__",
    "build",
    "dist",
    "osmsg/__version__.py",
]

[tool.ruff.lint]
select = ["I", "E", "W", "B", "F", "N", "Q", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ty.src]
include = ["osmsg"]

[tool.coverage.run]
source = ["osmsg"]

[tool.coverage.report]
show_missing = true
